--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header class="head_bar">
-        <h1 class="head_bar__title">Bookshelf Apps</h1>
+        <h2 class="head_bar__title">Bookshelf Apps</h2>
     </header>
     <main>
         <section class="input_section">
@@ -37,8 +37,9 @@
                     <label for="inputBookIsComplete">Selesai dibaca</label>
                     <input id="inputBookIsComplete" type="checkbox">
                 </div>
-                <button id="bookSubmit" type="submit">Masukkan Buku ke rak <span id="aj">Belum selesai
-                        dibaca</span></button>
+                <button id="bookSubmit" type="submit">Masukkan Buku ke rak <span>Belum selesai
+                        dibaca</span>
+                </button>
             </form>
         </section>
 
@@ -55,16 +56,7 @@
             <h2>Belum selesai dibaca</h2>
 
             <div id="incompleteBookshelfList" class="book_list">
-                <!-- <article class="book_item">
-                    <h3>Book Title</h3>
-                    <p>Penulis: John Doe</p>
-                    <p>Tahun: 2002</p>
 
-                    <div class="action">
-                        <button class="green">Selesai dibaca</button>
-                        <button class="red">Hapus buku</button>
-                    </div>
-                </article> -->
             </div>
         </section>
 
@@ -72,16 +64,7 @@
             <h2>Selesai dibaca</h2>
 
             <div id="completeBookshelfList" class="book_list">
-                <!-- <article class="book_item">
-                    <h3>Book Title</h3>
-                    <p>Penulis: John Doe</p>
-                    <p>Tahun: 2002</p>
 
-                    <div class="action">
-                        <button class="green">Belum selesai di Baca</button>
-                        <button class="red">Hapus buku</button>
-                    </div>
-                </article> -->
             </div>
         </section>
     </main>
